--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -1,6 +1,6 @@
 @article{lishihua2005,
   title={遥感图像分类方法研究综述},
-  author={李石华 and 王金亮 and 毕艳 and 陈姚 and 朱妙园 and 杨帅 and 朱佳},
+  author={{李石华,王金亮,毕艳等}},
   journal={国土资源遥感},
   volume={2},
   number={5},
@@ -20,23 +20,24 @@
 
 @phdthesis{wulun2006,
   title={地理信息系统数据的不确定性问题},
-  author={邬伦 and 承继成 and 史文中 and others},
+  author={邬伦 and 承继成 and 史文中},
   year={2006}
 }
+
 
 @inproceedings{he2005comparison,
   title={A comparison of PCA/ICA for data preprocessing in remote sensing imagery classification},
   author={He, Hui and Yu, Xianchuan},
   booktitle={MIPPR 2005: Image Analysis Techniques},
   volume={6044},
-  pages={604408},
+  pages={60--65},
   year={2005},
   organization={International Society for Optics and Photonics}
 }
 
 @article{lideren2012,
   title={高分辨率对地观测的若干前沿科学问题},
-  author={李德仁 and 童庆禧 and 李荣兴 and 龚健雅 and 张良培 and others},
+  author={{李德仁,童庆禧,李荣兴等}},
   journal={中国科学: 地球科学},
   volume={42},
   number={6},
@@ -79,7 +80,7 @@
 
 @article{zhangyongsheng2004,
   title={高分辨率遥感卫星应用},
-  author={张永生 and 巩丹超 and 刘军 and others},
+  author={{张永生,巩丹超,刘军等}},
   journal={科学出版社, 北京},
   year={2004}
 }
