--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -10,43 +10,42 @@
 \section{研究背景及意义}
 \label{sec:first}
 
-遥感技术是从各种传感器上收集地物目标的电磁辐射信息，经处理后成像，从而对地物进行探测和识别的一种技术。遥感影像数据被广泛应用在军事侦察、环境监测、植被分类、土地利用规划和矿产资源勘测等领域\cite{lishihua2005}。近年来，随着卫星遥感技术的发展和信息科技技术的完善，遥感影像分辨率不断提高，高分辨率影像信息量越来越丰富。 同时全球遥感数据成爆发式增长，但相关统计表明，遥感数据 $95\%$ 是不精确的、非结构化的数据，人类能够利用的数据仅占 $5\%$ 左右\cite{zhangjun2010}，如何在有限时间内高效利用遥感数据是当前遥感技术发展所面临的挑战。
+遥感技术是从各种传感器上收集地物目标的电磁辐射信息，经处理后成像，从而对地物信息进行探测和识别的一种技术。遥感影像数据被广泛应用在军事侦察、环境监测、植被分类、土地利用规划和矿产资源勘测等领域\cite{lishihua2005}。近年来，随着卫星遥感技术的发展和信息科技技术的完善，遥感影像分辨率不断提高，高分影像蕴含信息量越来越丰富。 同时全球遥感数据成爆发式增长，但相关统计表明，遥感数据 $95\%$ 是不精确的、非结构化的数据，人类能够利用的数据仅占 $5\%$ 左右\cite{zhangjun2010}，如何在有限时间内高效利用遥感数据是当前遥感技术发展所面临的挑战。
 
-影像分类与目标地物识别是遥感影像分析和应用的重要内容，如何准确、快速地对遥感影像分类与识别是当前遥感应用领域的研究热点。传统的遥感影像分类方法从人工目视解译发展到人机交互解译，再到半自动解译，最后到当前基于机器学习模型和人工智能技术的全自动解译发展过程；影像分类模型则由传统的像元解译、局部结构特征提取发展到了面向对象识别的阶段；分类器也从单一的分类器发展为层叠或多个分类器相结合的方法\cite{lideren2012}。基于新兴理论提出的新技术、新方法在遥感影像分类与识别研究中取得了较好的识别效果，提升了影像识别的精度。然而，由于遥感影像存在混合像元，同物异谱和同谱异物等问题\cite{wulun2006}，遥感影像数据固有的不确定性成为影像分类亟需解决的问题，如果能构建适当模型描述影像数据，进而提取目标地物特征信息，这将成为影像分类与目标识别的新思路\cite{he2005comparison}。 同时，因高分影像具有更详细的几何、纹理、形状等特征信息，同类地物类内特征差异大。且高分影像光谱波段较少，模型提取的地物特征有限，预测出清晰、明确的地物边界面临挑战。
+影像分类与目标地物识别是遥感影像分析和应用的重要内容，如何准确、快速地对遥感影像分类与识别是当前遥感应用领域的研究热点。传统的遥感影像分类方法从人工目视解译发展到人机交互解译，再到半自动解译，最后到当前基于机器学习模型和人工智能技术的全自动解译发展过程；影像分类模型则由传统的像元解译、局部结构特征提取发展到了面向对象识别的阶段；分类器也从单一分类器发展为层叠或多个分类器联合的方式\cite{lideren2012}。基于新兴理论提出的新技术、新方法在遥感影像分类与识别研究中取得了较好的识别效果，提升了影像识别的精度。然而，遥感影像存在混合像元，同物异谱和同谱异物等数据问题\cite{wulun2006}，影像数据固有不确定性成为影像分类亟需解决的问题，如果能建立恰当模型描述影像数据，进而提取目标地物特征信息，这将成为影像分类与目标识别的新思路\cite{he2005comparison}。 同时，因高分影像具有更详细的几何、纹理、形状等特征信息，同类地物类内特征差异大。且高分影像光谱波段较少，模型提取的地物特征有限，预测出清晰、明确的地物边界面临挑战。
 
-模糊聚类方法（Fuzzy clustering methods）\cite{bezdek1984fcm}是上世纪八九十年代提出的非监督聚类方法，它的核心优势在于构建的影像数据的不确定信息表达模型，具有良好的特征表达能力。随着遥感影像分辨率的提高，近几年，基于像素的模糊聚类方法发展为面向对象的模糊聚类方法，被广泛应用到高分影像的聚类分割任务中。相关学者对面向对象的影像分割单元采用均值数据建模\cite{yu2012method}或区间值数据建模\cite{he2016remote},均取得了不错的地物分类效果。
 
-深度学习（Deep learning，DL）\cite{hinton2006fast}和全卷积分割网络（Fully convolutional network， FCN）\cite{long2015fully}模型是近几年兴起并迅速发展的有监督影像分类方法。它能够自动从低阶特征中学习到复杂、抽象的高阶特征，从而更准确、高效的决策出分类结果。基于全卷积网络的图像分割方法相比传统机器学习方法具有更大的优势，被广泛用于遥感影像有监督分类中。
+深度学习（Deep learning，DL）\cite{hinton2006fast}和全卷积分割网络（Fully convolutional network， FCN）\cite{long2015fully}模型是近几年兴起并迅速发展的遥感影像分类方法。它能够自动从低阶特征中学习到复杂、抽象的高阶特征，从而更准确、高效的决策出分类结果。基于全卷积结构的影像分类方法相比传统分类方法具有更大的优势，被广泛用于遥感影像分类识别任务中。
 
-本文将从遥感影像不确定性数据建模和地物分类一致性两个角度，对高分影像地物分类问题进行研究，并改进相关地物分类方法。一方面设计三角形模糊集值信息表达模型来表征影像分割单元特征，提出基于三角形模糊集值的区间二型模糊聚类分割方法用于高分影像聚类分割处理。另一方面，将深度学习中生成对抗网络的思想应用到全卷积分割模型中，借助生成网络优秀的图像生成能力，新提出的基于生成对抗网络的分割方法能生成更准确的地物分割边界，且同类别地物空间具有一致性。
+本文将从遥感影像地物分类一致性和不确定性数据建模两个角度，对高分影像地物分类问题进行研究，并改进相关地物分类方法。一方面将深度学习中生成对抗网络的思想应用到全卷积分类模型中，借助生成网络优秀的图像生成能力和判别模型纠正生成结果与真实样本的差异的特性，新提出的基于条件生成对抗网络的影像分类方法能生成获得更好的分类效果，且同类别地物空间更具有一致性。另一方面，利用作者先前提出的面向对象的遥感影像模糊聚类方法处理影像数据，模糊聚类输出结果作为影像区域领域关系和同质性的特征图，将特征图引入提出的基于条件对抗生成网络的影像分类方法中，联合训练，提升影像分类结果同类别地物一致性，并得到更准确的地物分类边界。
 
 
 
 \section{国内外研究现状}
 \label{sec:second}
-为了方便介绍，本文中将深度学习方法之前的遥感影像分类方法称为传统的遥感影像分类方法。本节内容主要介绍了传统的高分辨率遥感影像分类识别方法和基于深度学习技术\citep{hinton2006fast, bengio2009learning, NIPS2012_4824} 的遥感影像识别分类方法的研究进展和现状。
+为了方便介绍，本文中将未深度学习技术前提出的遥感影像分类方法称为传统的遥感影像分类方法。本节内容主要介绍了传统的高分辨率遥感影像分类识别方法和基于深度学习技术\citep{hinton2006fast, bengio2009learning, NIPS2012_4824} 的遥感影像识别分类方法的研究进展和现状。
 % ，遥感影像的聚类分割
 
 \subsection{传统的高分辨率遥感影像分类与识别方法}
 \label{subsec:1-2-1}
-早在1957年，卫星遥感技术就应用到遥感影像分类与识别任务中。目标地物的分类与识别一直以来都是遥感影像分析中的一个基础任务，对于研究目标物体或现象的发展过程与分布规律有着重要意义\cite{jensen1987introductory}。遥感影像分类方法依据是否使用地物类别先验知识分为监督分类和非监督分类。监督分类是指利用样本已有先验类别训练分类模型，模型能够建立样本特征到类别标签的决策映射规则； 非监督分类是指在缺乏样本类别先验知识的前提下，只根据样本数据本身特性进行分类，根据样本相似度划分类别，如聚类\cite{djukanovic1993unsupervised}。根据分类单元不同，遥感影像的分类方法可划分为基于像元和面向对象的分类。基于像元的分类方法以像元的光谱信息作为主要依据进行分类，常见的基于像元的遥感影像分类方法有：最小距离分析法\cite{wacker1972minimum}，最大似然分类法\cite{strahler1980use}，K-均值聚类法\cite{atkinson2000geostatistical} ，ISODATA 聚类法\cite{paul2002new} 和模糊C均值聚类方法\cite{bezdek1984fcm}等。随着遥感技术不断发展与成熟，遥感影像空间分辨率不断提高。一般地，我们将空间分辨率高于 $5m$ 遥感影像称作高分辨率遥感影像\cite{zhangyongsheng2004}。高分影像相比低分辨率影像来说光谱信息相对匮乏，而高分影像的几何、纹理等信息却更加丰富。基于像元的分类方法应用到高分辨率影像中会导致影像解译速度慢，同时椒盐噪声极易产生，因而其不适用于高分影像分类\cite{blaschke2010object}。
+早在1957年，卫星遥感技术就应用到遥感影像分类与识别任务中。目标地物的分类与识别一直以来都是遥感影像分析中的一个基础任务，对于研究目标物体或现象的发展过程与分布规律有着重要意义\cite{jensen1987introductory}。根据有无使用先验知识，遥感影像的分类方法可分为监督分类与无监督分类。监督分类是指利用样本已有先验类别训练分类模型，模型能够建立样本特征到类别标签的决策映射规则； 非监督分类是指在没有类别先验知识的前提下，只能根据样本数据内在特性进行分类，根据样本间相似性度量分类，例如聚类\cite{djukanovic1993unsupervised}。遥感影像分类方法还可基于分类单元不同，划分为基于像元和面向对象的分类方法。基于像元的分类方法将像元光谱特征作为主要分类依据，常见的基于像元的影像分类方法包括：最小距离分析法\cite{wacker1972minimum}，最大似然分类法\cite{strahler1980use}，K-均值聚类法\cite{atkinson2000geostatistical} ，ISODATA 聚类法\cite{paul2002new} 和模糊C均值聚类方法\cite{bezdek1984fcm}等。随着遥感技术迅速发展和不断成熟，影像数据空间分辨率持续增高。一般地，我们将空间分辨率高于 $5m$ 遥感影像称作高分影像\cite{zhangyongsheng2004}。高分影像相比低分影像来说光谱信息相对匮乏，而高分影像的几何、纹理等信息却更加丰富。基于像元的分类方法应用到高分辨率影像中会导致影像解译速度慢，同时椒盐噪声极易产生，因而其不适用于高分影像分类\cite{blaschke2010object}。
 
-面向对象的高分辨率影像分类方法将影像中邻域同质像元组成的对象作为分类单元，充分利用影像地物的形状、纹理等特征, 更适合高分影像分类与识别\cite{zhangyongsheng2004}。 早在1976年，Kettig 和 Robert \cite{kettig1976classification} 就将面向对象的思想引入遥感影像研究领域中。随后，Lobo 等人 \cite{lobo1996classification} 将面向对象分类方法应用到遥感影像分类中，通过实验证明了在高分影像识别任务中面向对象的分类方法比基于像元的方法识别速度更快，分类精度更高。Baatz \cite{baatz1999object} 基于高分辨率遥感影像特性，系统地提出高分影像的面向对象分类方法。之后，面向对象分类方法被广泛应用到高分影像分类识别任务中，发展迅速。 Geneletti \cite{geneletti2003method} 和 Guo \cite{guo2007object} 分别从非监督分类的研究方向表明面向对象分类方法是基于像元方法的有效替代。文献\citep{yu2012method, he2016remote} 则从刻画遥感数据不确定性的角度提出面向对象模糊聚类方法，且都取得了不错的分割结果。在工业应用领域，德国 Definiens 公司于2009 年开发的 Ecognition 影像分析软件极大的推动了面向对象的高分影像分类方法的商业发展，同时也表明了面向对象的高分影像方法的成熟。
+面向对象的高分影像分类方法将影像中邻域同质像元组成对象当作分类单元，充分利用影像地物的形状、纹理等特征, 更适合高分影像分类与识别\cite{zhangyongsheng2004}。 早在1976年，Kettig 和 Robert \cite{kettig1976classification} 就将面向对象的思想引入遥感影像研究领域中。随后，Lobo 等人 \cite{lobo1996classification} 将面向对象方法引入遥感影像分类领域，相关实验结论证明了在高分影像识别任务中面向对象方法比基于像元的方法识别速度更快，分类精度更高。Baatz \cite{baatz1999object} 基于高分辨率遥感影像特性，系统地提出高分影像的面向对象分类方法。之后，面向对象分类方法被广泛应用到高分影像分类任务中，发展迅速。 Geneletti \cite{geneletti2003method} 和 Guo \cite{guo2007object} 分别从非监督分类的研究方向表明面向对象分类方法是基于像元方法的有效替代。德国 Definiens 公司于2009 年开发的Ecognition 影像分析软件极大的推动了面向对象影像分类方法在工业商业领域的发展，同时也表明了面向对象的高分影像方法的成熟。
 
-一般的， 面向对象的遥感影像分类方法通常包含三个部分： 影像分割，特征提取和分类识别。 高分影像因其空间分辨率高，纹理、形状等空间信息相对丰富，分割方法和精度便成为影像分割的关键要素。Canny 通过提出 Canny 算子 \cite{canny1987computational} 检测出影像所有边缘点，并将边缘点依次连接形成边界从而实现影像边缘分割。Otsu 基于灰度直方图动态计算图像分割中的阈值范围，形成不同目标间差异最大化，实现阈值分割\cite{otsu1979threshold}。 Vincent \cite{vincent1991watersheds} 等结合沉浸模型提出影像的分水岭分割。 Achanta 和 Radhakrishna \cite{achanta2012slic} 基于K-均值聚类方法，采用简单的迭代聚类高效地生成影像分割单元，提出 SLIC 超像素分割算法，该方法目前被广泛应用到影像分割中。在特征提取阶段，最初采用影像的光谱、纹理和形状等低阶特征信息，但低阶特征无法获得较好的分类效果。文献 \cite{weizman2009urban} 中引入词包模型的中层语义特征实现对遥感影像信息更好的表达，实验结果表明该方法分类效果更好。 随后，Lienou 等\cite{lienou2010semantic} 将主题模型应用到词包模型的单词语义分析中，改进了前者的分类精度。He 等人 \cite{he2016remote} 针对遥感影像同物异谱的现象，结合模糊数学中不确定性理论的相关方法，设计一种区间值特征来提取目标地物的特征，用于面向对象的非监督分类。目前，在特征提取的方面研究者做了大量工作，然而，高级特征的表达仍需要复杂的人工设计和反复实验验证。 分类识别阶段是针对特征提取阶段获得的分割对象的特征，利用分类器对待识别目标进行分类识别。目前，常用的机器学习分类方法包含随机森林 \cite{pal2005random}，支持向量机 \cite{suykens1999least} ，决策树 \cite{friedl1997decision} 和神经网络模型 \cite{haykin1994neural} 等。 在这些分类器基础上，通过结合不同分类器延申而出的集成学习 \cite{freund1996experiments} 的方法也被应用到高分影像分类中。
+一般的， 面向对象的遥感影像分类方法通常包含影像分割，特征提取和分类预测这三部分内容。Canny 通过提出 Canny 算子 \cite{canny1987computational} 检测出影像所有边缘点，并将边缘点依次连接形成边界从而实现影像边缘分割。Otsu 基于灰度直方图动态计算图像分割中的阈值范围，形成不同目标间差异最大化，实现阈值分割\cite{otsu1979threshold}。 Vincent \cite{vincent1991watersheds} 等结合沉浸模型提出影像的分水岭分割。 Achanta 和 Radhakrishna \cite{achanta2012slic} 基于K-均值聚类方法，采用简单的迭代聚类高效地生成影像分割单元，提出 SLIC 超像素分割算法，SLIC 分割效果被学界普遍认可。在特征提取阶段，最初采用影像的光谱、纹理和形状等低阶特征信息，但低阶特征无法获得较好的分类效果。文献 \cite{weizman2009urban} 中引入词包模型的中层语义特征实现对遥感影像信息更好的表达，实验结果表明该方法分类效果更好。 随后，Lienou 等\cite{lienou2010semantic} 将主题模型应用到词包模型的单词语义分析中，改进了前者的分类精度。He 等人 \cite{he2016remote} 针对遥感影像同物异谱的现象，结合模糊数学中不确定性理论，设计一种区间值特征对影像数据建模。目前，在特征提取的方面研究者做了大量工作，然而，高级特征的表达仍需要复杂的人工设计和反复实验验证。 分类识别阶段是对特征提取得到的数据特征，利用分类器对原始数据决策识别。目前，常用的机器学习分类方法包含随机森林 \cite{pal2005random}，支持向量机 \cite{suykens1999least} ，决策树 \cite{friedl1997decision} 和神经网络模型 \cite{haykin1994neural} 等。 在这些分类器基础上，通过结合不同分类器延申而出的集成学习 \cite{freund1996experiments} 的方法也被应用到高分影像分类中。
 
-然而，传统的高分影像的分类与识别方法只应用到影像中、低层特征，无法充分表达影像信息，而采用的影像分类器大多是只有 $1\sim2$ 层的浅层结构模型，无法充分学习和表达遥感影像复杂的数据结构和特征信息。因此，研究结构更复杂，表达能力更强的影像分类模型具有重要的意义。
+然而，传统的高分影像分类方法只能提取影像浅层特征，无法充分表达影像信息，而采用的影像分类器大多是只有 $1\sim2$ 层的浅层结构模型，无法学习到遥感影像内部复杂特征。因此，探索结构更复杂、表征能力更强的分类模型具有重要的研究意义。
 
-\subsection{基于深度学习框架的影像分类研究现状}
+\subsection{基于深度学习理论的影像分类研究现状}
 \label{subsec:1-2-2}
-深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习通过组合低层特征形成更加抽象的高层表示属性类别或特征，从大量数据中自动学习数据的特征表示。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理语、音识别、搜索推荐、游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像进行分类，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习算法模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Network，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了生成模型和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型 D 。随后，基于GAN 网络的一系列生成模型方法如 CGAN\cite{mirza2014conditional} 、DCGAN \cite{radford2015unsupervised} 、InfoGAN \cite{chen2016infogan} 和 WGAN \cite{arjovsky2017wasserstein} 等被相继提出，不仅提升 GAN 模型生成与识别精度，同时极大丰富了GAN 网络的应用场景。
+深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习模型能挖掘数据低阶特征的内在规律，形成抽象的高阶特征或属性，从大量数据中建模数据内在规律。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理语、音识别、搜索推荐、游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像分类识别，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Network，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了生成模型和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型 D 。随后，基于GAN 网络的一系列生成模型方法如 CGAN\cite{mirza2014conditional} 、DCGAN \cite{radford2015unsupervised} 、InfoGAN \cite{chen2016infogan} 和 WGAN \cite{arjovsky2017wasserstein} 等被相继提出，不仅提升 GAN 模型生成与识别精度，同时极大丰富了GAN 网络的应用场景。
 
-由于深度学习在图像分类识别的巨大成功与广泛应用，研究学者逐渐将深度学习理论引入遥感影像分类，基于深度学习理论的研究方法逐渐成为遥感影像发展的下一个趋势。文献 \cite{hu2015transferring} 利用迁移学习知识，首次将深度卷积神经网络应用到高分辨率遥感影像场景分类中，能有效学习影像的高级特征表示。 Marco 等人 \cite{castelluccio2015land} 将预训练的 GoogLeNet 网络参数，迁移到 UC Merced 土地利用数据集 \footnote{数据集访问链接:http://weegee.vision.ucmerced.edu/datasets/landuse.html} 上，其提出的方法在 UC Merced 数据集上获得了 $10\%$ 的分类识别精度提升，实验结果也表明了 CNN 结构在遥感影像上的成功。 2016年，Romero 等人 \cite{romero2016unsupervised} 使用贪婪分层无监督预训练，结合稀疏表示理论，实现对高分影像土地利用和土地覆盖的无监督分类。 Kampffmeyer 等 \cite{kampffmeyer2016semantic} 则使用 CNN 结构量化遥感影像像素尺度上的不确定性，对图像上每个像素进行分类，完成遥感影像的类别分类和语义分割。 文献 \cite{maggiori2016fully} 基于全卷积网络（Fully convolutional network，FCN）结构，对影像进行四层卷积下采样提取特征，接着四层反卷积对特征图上采样回初始影像分辨率，输出所有像素点类别，实现遥感影像的像素级分类。 U-Net \cite{ronneberger2015u} 网络结合反卷积与跳跃网络的优势，对 FCN 结构加以改进。文献 \cite{li2018deepunet} 基于 U-Net 网络完成对海陆影像水域-陆地分割识别。文献 \cite{zhang2018road} 则在 U-Net 基础上结合残差学习的思想，完成对遥感影像道路信息的提取。
+由于深度学习在图像分类识别的巨大成功与广泛应用，研究学者逐渐将深度学习理论引入遥感影像分类，基于深度学习理论的研究方法逐渐成为遥感影像发展的下一个趋势。文献 \cite{hu2015transferring} 利用迁移学习知识，首次将深度卷积神经网络应用到高分影像场景分类中，能有效学习影像的高级特征表示。 Marco 等人 \cite{castelluccio2015land} 将预训练的 GoogLeNet 网络参数，迁移到 UC Merced 土地利用数据集 \footnote{数据集访问链接:http://weegee.vision.ucmerced.edu/datasets/landuse.html} 上，其提出的方法在 UC Merced 数据集上获得了 $10\%$ 的分类识别精度提升，实验结果也表明了 CNN 结构在遥感影像上的成功。 2016年，Romero 等人 \cite{romero2016unsupervised} 使用贪婪分层无监督预训练，结合稀疏表示理论，实现对高分影像土地利用和土地覆盖的无监督分类。 Kampffmeyer 等 \cite{kampffmeyer2016semantic} 则使用 CNN 结构量化遥感影像像素尺度上的不确定性，对图像上每个像素进行分类，完成遥感影像的类别分类和语义分割。 文献 \cite{maggiori2016fully} 基于全卷积分类网络（Fully convolutional network，FCN），将CNN 模型中的全连接层全部替换为卷积层，模型输出影像所有像素点类别，实现遥感影像的像素级分类。 U-Net \cite{ronneberger2015u} 网络结合反卷积与跳跃网络的优势，对 FCN 结构加以改进。文献 \cite{li2018deepunet} 基于 U-Net 网络完成对海陆影像水域-陆地分割识别。文献 \cite{zhang2018road} 则在 U-Net 基础上结合残差学习的思想，完成对遥感影像道路信息的提取。
 
 
-\subsection{存在的主要问题}
-\label{subsec:1-2-3}
-结合高分影像研究现状可知，影像分类与识别方法发展迅速。传统机器学习分类方法只能提取浅层特征，且分类器结构相对简单。基于深度学习理论的影像分类方法具有很大的应用潜力，但是其需要大量标记好的训练样本，模型难以训练。高分影像分类中遥感影像不确定信息的表达和预测同类地物的一致性均是可研究和改进的方向，恰当的特征建模和分类方法可以进一步提升影像分类的精度。
+% \subsection{存在的主要问题}
+% \label{subsec:1-2-3}
+% 结合高分影像研究现状可知，影像分类与识别方法发展迅速。传统机器学习分类方法只能提取浅层特征，且分类器结构相对简单。基于深度学习理论的影像分类方法具有很大的应用潜力，但是其需要大量标记好的训练样本，模型难以训练。高分影像分类中遥感影像不确定信息的表达和预测同类地物的一致性均是可研究和改进的方向，恰当的特征建模和分类方法可以进一步提升影像分类的精度。
 
 \section{本文的组织结构}
 \label{sec:third}
@@ -54,11 +53,11 @@
 
 第 \textbf{\ref{cha:chap01}} 章：系统地介绍了论文课题相关的研究背景、研究意义和国内外现状。重点对当前遥感影像分类中面临的挑战展开介绍，并针对这些问题，提出了改进方案，引出本课题主要的研究内容。
 
-第 \textbf{\ref{cha:chap02}} 章： 详细介绍了遥感影像分类相关的理论基础。首先介绍了面向对象的模糊聚类分割方法中常用的影像分割方法和经典的模糊聚类方法。然后介绍了深度学习卷积神经网络的基本结构和相关概念，同时介绍了基于全卷积网络的影像分割模型，包含全卷积网络的结构、模型以及网络特点。
+第 \textbf{\ref{cha:chap02}} 章： 详细介绍了深度学习相关理论。包含卷积神经网络、全卷积神经网络和生成对抗网络三个经典深度模型的结构和原理。然后介绍了基于全卷积网络的遥感影像分类方法。
 
-第 \textbf{\ref{cha:chap03}} 章：首先针对遥感数据的不确定信息建模，设计三角形模糊集值模型，并提出新的区间值度量方法，并通过理论推导证明新提出的数据模型和距离度量的合理性。然后结合新提出的数据模型和距离度量提出改进的区间二型模糊聚类方法。最后，将新提出的方法应用到多来源数据的聚类分割实验中，对比其他模糊聚类分割方法，验证新提出方法的有效性。
+第 \textbf{\ref{cha:chap03}} 章：针对现有全卷积影像分类方法的缺陷，将条件生成对抗网络结构引入全卷积分割模型中，提出基于条件生成对抗网络的影像分割方法。并详细介绍了新提出方法的模型原理和算法实现。再在遥感影像分类实验上验证新提出方法的有效性。
 
-第 \textbf{\ref{cha:chap04}} 章：首先介绍生成对抗网络的基本框架和模型方法。然后将条件生成对抗网络模型应用到全卷积分割方法中，提出基于条件生成对抗网络的影像分割方法，并详细介绍了新提出方法的模型结构和目标函数。接着对实验中使用到的Vaihingen 数据集介绍和预处理，获得实验需要的训练集和测试集数据。最后，比较新提出的方法与对比方法分割结果，验证新提出方法的有效性。
+第 \textbf{\ref{cha:chap04}} 章：通过预处理方法提取遥感影像数据的不确定信息特征，作为基于条件生成对抗网络的影像分割方法的先验特征，用于模型训练，提升新方法的分类精度，保证同类地物类内像素的空间一致性。
 
 第 \textbf{\ref{cha:chap05}} 章： 总结本论文课题的研究内容，归纳文中研究成果，并对论文中存在的一些问题提出未来的展望。
 
@@ -67,9 +66,9 @@
 \label{sec:forth}
 本文研究内容主要有四个创新点：
 \begin{enumerate}[(1)]
-    \item 设计三角形模糊集值信息表达模型来表征影像分割单元，能表征分割单元数据内部特征信息。
+    \item 将生成对抗训练的思想应用到全卷积影像分类模型中，提出基于条件生成对抗网络的影像方法，提高影像分类精度。
     \item 针对两个三角形的模糊集值数据，提出一种新的区间值距离度量，能够表征数据间的相异性。
     \item 结合新提出的数据模型和区间距离度量，改进现有的面向对象的模糊聚类分割方法，并应用到高分影像分割实验中。
-    \item 将生成对抗网络的思想应用到全卷积影像分割模型框架中，提出的基于CGAN 的分割方法能生成更好的地物边界，且保持空间一致性。
+    \item 将生成对抗网络的思想应用到全卷积影像分割模型框架中，提出基于CGAN 的分割方法能生成更好的地物边界，且保持空间一致性。
 
 \end{enumerate}
