--- a/jiangtao_thesis.tex
+++ b/jiangtao_thesis.tex
@@ -18,6 +18,14 @@
 \usepackage{longtable,pdflscape}
 % 你可以在这里修改配置文件中的定义，导言区可以使用中文。
 % \def\myname{薛瑞尼}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+\usepackage{amsmath}
+\floatname{algorithm}{算法} 
+\renewcommand{\algorithmicrequire}{\textbf{输入:}}  % Use Input in the format of Algorithm
+\renewcommand{\algorithmicensure}{\textbf{输出:}} % Use Output in the format of Algorithm
+
+
 
 \begin{document}
 % 定义所有的eps文件在figures子目录下
@@ -49,7 +57,7 @@
 \include{data/chap01}
 \include{data/chap02}
 \include{data/chap03}
- \include{data/chap04}
+\include{data/chap04}
 \include{data/chap05}
 
 
