--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -9,9 +9,9 @@
 
 \section{研究背景及意义}
 \label{sec:first}
-%随着卫星遥感技术的发展和信息科技技术的完善，遥感影像分辨率不断提高
+%
 
-遥感技术是从各种传感器上收集地物目标的电磁辐射信息，经处理后成像，从而对地物信息进行探测和识别的一种技术。遥感影像数据被广泛应用在军事侦察、环境监测、植被分类、土地利用规划和矿产资源勘测等领域\cite{lishihua2005}。近年来，科学技术持续进步，遥感影像分辨率不断提高，高分影像蕴含信息量越来越丰富。 同时全球遥感数据成爆发式增长，但相关统计表明，遥感数据 $95\%$ 是不精确的、非结构化的数据，人类能够利用的数据仅占 $5\%$ 左右\cite{zhangjun2010}，如何在有限时间内高效利用遥感数据是当前遥感技术发展所面临的挑战。
+遥感技术是从各种传感器上收集地物目标的电磁辐射信息，经处理后成像，从而对地物信息进行探测和识别的一种技术。遥感影像数据被广泛应用在军事侦察、环境监测、植被分类、土地利用规划和矿产资源勘测等领域\cite{lishihua2005}。近年来，随着卫星遥感技术的发展和信息科技技术的完善，遥感影像分辨率不断提高，高分影像蕴含信息量越来越丰富。 同时全球遥感数据成爆发式增长，但相关统计表明，遥感数据 $95\%$ 是不精确的、非结构化的数据，人类能够利用的数据仅占 $5\%$ 左右\cite{zhangjun2010}，如何在有限时间内高效利用遥感数据是当前遥感技术发展所面临的挑战。
 
 影像分类与目标地物识别是遥感影像分析和应用的重要内容，如何准确、快速地对遥感影像分类与识别是当前遥感应用领域的研究热点。传统的遥感影像分类方法从人工目视解译发展到人机交互解译，再到半自动解译，最后到当前基于机器学习模型和人工智能技术的全自动解译发展过程；影像分类模型则由传统的像元解译、局部结构特征提取发展到了面向对象识别的阶段；分类器也从单一分类器发展为层叠或多个分类器联合的方式\cite{lideren2012}。基于新兴理论提出的新技术、新方法在遥感影像分类与识别研究中取得了较好的识别效果，提升了影像识别的精度。然而，遥感影像存在混合像元，同物异谱和同谱异物等数据问题\cite{wulun2006}，影像数据固有不确定性成为影像分类亟需解决的问题，如果能建立恰当模型描述影像数据，进而提取目标地物特征信息，这将成为影像分类与目标识别的新思路\cite{he2005comparison}。 同时，因高分影像具有更详细的几何、纹理、形状等特征信息，同类地物类内特征差异大。且高分影像光谱波段较少，模型提取的地物特征有限，预测出清晰、明确的地物边界面临挑战。
 
@@ -39,9 +39,9 @@
 
 \subsection{基于深度学习理论的影像分类研究现状}
 \label{subsec:1-2-2}
-深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习模型能挖掘数据低阶特征的内在规律，形成抽象的高阶特征或属性，从大量数据中建模数据内在规律。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理语、音识别、搜索推荐、游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像分类识别，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Network，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了生成模型和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。随后，基于GAN 网络的一系列生成模型方法如 CGAN\cite{mirza2014conditional} 、DCGAN \cite{radford2015unsupervised} 、InfoGAN \cite{chen2016infogan} 和 WGAN \cite{arjovsky2017wasserstein} 等被相继提出，不仅提升 GAN 模型生成与识别精度，同时极大丰富了GAN 网络的应用场景。
+深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习模型能挖掘数据低阶特征的内在规律，形成抽象的高阶特征或属性，从大量数据中建模数据内在规律。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理语、音识别、搜索推荐、游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像分类识别，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Network，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了生成模型和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型D 。随后，基于GAN 网络的一系列生成模型方法如 CGAN\cite{mirza2014conditional} 、DCGAN \cite{radford2015unsupervised} 、InfoGAN \cite{chen2016infogan} 和 WGAN \cite{arjovsky2017wasserstein} 等被相继提出，不仅提升 GAN 模型生成与识别精度，同时极大丰富了GAN 网络的应用场景。
 
-% GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型 D 。
+% 
 
 由于深度学习在图像分类识别的巨大成功与广泛应用，研究学者逐渐将深度学习理论引入遥感影像分类，基于深度学习理论的研究方法逐渐成为遥感影像发展的下一个趋势。文献 \cite{hu2015transferring} 利用迁移学习知识，首次将深度卷积神经网络应用到高分影像场景分类中，能有效学习影像的高级特征表示。 Marco 等人 \cite{castelluccio2015land} 将预训练的 GoogLeNet 网络参数，迁移到 UC Merced 土地利用数据集 \footnote{数据集访问链接:http://weegee.vision.ucmerced.edu/datasets/landuse.html} 上，其提出的方法在 UC Merced 数据集上获得了 $10\%$ 的分类识别精度提升，实验结果也表明了 CNN 结构在遥感影像上的成功。 2016年，Romero 等人 \cite{romero2016unsupervised} 使用贪婪分层无监督预训练，结合稀疏表示理论，实现对高分影像土地利用和土地覆盖的无监督分类。 Kampffmeyer 等 \cite{kampffmeyer2016semantic} 则使用 CNN 结构量化遥感影像像素尺度上的不确定性，对图像上每个像素进行分类，完成遥感影像的类别分类和语义分割。 文献 \cite{maggiori2016fully} 基于全卷积分类网络（Fully convolutional network，FCN），将CNN 模型中的全连接层全部替换为卷积层，模型输出影像所有像素点类别，实现遥感影像的像素级分类。 U-Net \cite{ronneberger2015u} 网络结合反卷积与跳跃网络的优势，对 FCN 结构加以改进。文献 \cite{li2018deepunet} 基于 U-Net 网络完成对海陆影像水域-陆地分割识别。文献 \cite{zhang2018road} 则在 U-Net 基础上结合残差学习的思想，完成对遥感影像道路信息的提取。
 
@@ -56,8 +56,8 @@
 
 第 \textbf{\ref{cha:chap01}} 章：系统地介绍了论文课题相关的研究背景、研究意义和国内外现状。重点对当前遥感影像分类中面临的挑战展开介绍，并针对这些问题，提出了改进方案，引出本课题主要的研究内容。
 
-第 \textbf{\ref{cha:chap02}} 章： 本章详细介绍了深度学习相关理论。介绍了CNN、FCN和GAN 这三个深度学习模型的结构和原理。然后介绍了基于全卷积网络的遥感影像分类方法。
-%卷积神经网络、全卷积神经网络和生成对抗网络
+第 \textbf{\ref{cha:chap02}} 章： 本章详细介绍了深度学习相关理论。介绍了卷积神经网络、全卷积神经网络和生成对抗网络这三个深度学习模型的结构和原理。然后介绍了基于全卷积网络的遥感影像分类方法。
+
 
 第 \textbf{\ref{cha:chap03}} 章：针对现有全卷积影像分类方法的缺陷，将条件生成对抗网络结构引入全卷积分割模型中，提出基于条件生成对抗网络的影像分割方法。并详细介绍了新提出方法的模型原理和算法实现。再在遥感影像分类实验上验证新提出方法的有效性。
 
