--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -16,9 +16,11 @@
 影像分类与目标地物识别是遥感影像分析和应用的重要内容，如何准确、快速地对遥感影像分类与识别是当前遥感应用领域的研究热点。传统的遥感影像分类方法从人工目视解译发展到人机交互解译，再到半自动解译，最后到当前基于机器学习模型和人工智能技术的全自动解译发展过程；影像分类模型则由传统的像元解译、局部结构特征提取发展到了面向对象识别的阶段；分类器也从单一分类器发展为层叠或多个分类器联合的方式\cite{lideren2012}。基于新兴理论提出的新技术、新方法在遥感影像分类与识别研究中取得了较好的识别效果，提升了影像识别的精度。然而，遥感影像存在混合像元，同物异谱和同谱异物等数据问题\cite{wulun2006}，影像数据固有不确定性成为影像分类亟需解决的问题，如果能建立恰当模型描述影像数据，进而提取目标地物特征信息，这将成为影像分类与目标识别的新思路\cite{he2005comparison}。 同时，因高分影像具有更详细的几何、纹理、形状等特征信息，同类地物类内特征差异大。且高分影像光谱波段较少，模型提取的地物特征有限，预测出清晰、明确的地物边界面临挑战。
 
 
-深度学习（Deep learning，DL）\cite{hinton2006fast}和全卷积分割网络（Fully convolutional network， FCN）\cite{long2015fully}模型是近几年兴起并迅速发展的遥感影像分类方法。它能够自动从低阶特征中学习到复杂、抽象的高阶特征，从而更准确、高效的决策出分类结果。基于全卷积结构的影像分类方法相比传统分类方法具有更大的优势，被广泛用于遥感影像分类识别任务中。
+深度学习（Deep learning，DL）\cite{hinton2006fast}和全卷积分割网络（Fully convolutional network， FCN）\cite{long2015fully}模型是近几年兴起并迅速发展的遥感影像分类方法。它能够自动从低阶特征中学习到复杂、抽象的高阶特征，从而更准确、高效的决策出分类结果。基于全卷积结构的影像分类方法相比传统分类方法具有更大的优势，被广泛用于遥感影像分类识别任务中。然而，FCN 分类模型在池化操作和反卷积上采样过程中会丢失影像边界、位置等低阶特征信息，导致模型分类预测的地物边界模糊、有歧义。此外，FCN 分类模型输出为各像素点的类别概率，地物分割时容易产生许多细碎的错分区域，破坏分类结果中同类地物的完整性。
 
-本文将从遥感影像地物分类一致性和不确定性数据建模两个角度，对高分影像地物分类问题进行研究，并改进相关地物分类方法。一方面将深度学习中生成对抗网络的思想应用到全卷积分类模型中，借助生成网络优秀的图像生成能力和判别模型纠正生成结果与真实样本的差异的特性，新提出的基于条件生成对抗网络的影像分类方法能生成获得更好的分类效果，且同类别地物空间更具有一致性。另一方面，利用作者先前提出的面向对象的遥感影像模糊聚类方法处理影像数据，模糊聚类输出结果作为影像区域领域关系和同质性的特征图，将特征图引入提出的基于条件对抗生成网络的影像分类方法中，联合训练，提升影像分类结果同类别地物一致性，并得到更准确的地物分类边界。
+本文将从消除遥感影像地物分类混淆边界和保持分类结果中同类地物像素点的一致性两个角度，对高分影像地物分类问题展开研究，并改进现有的地物分类方法。首先将生成对抗网络中对抗训练的思想应用到全卷积分类模型中，借助生成网络优秀的图像生成能力和判别网络纠正生成结果与真实样本差异的特性，提出基于条件生成对抗网络的全卷积影像分类方法。然后，通过模糊聚类分割预处理方式得到影像同质性分割单元，在分割模型的高阶语义特征中融合对应尺度的边界掩膜特征，提出融合边界特征的影像分类方法，用于增强影像分类结果异类地物的边界识别能力。并得到更准确的地物分类边界。接着，基于像素点所属同质性分割单元内其他像素点的类别预测关系，更新像素点的类别预测概率，提出基于辅助信息后处理的影像分类方法，目的是减少分割结果中细碎的错分区域，确保同类地物分类结果的完整性。最后，综合这两种优化思路，改进基于条件生成对抗网络的影像分类方法，使得分类结果既有更清晰、准确的地物分类边界，又能确保同类地物类内像素类别一致性。本文课题来源于国家自然科学基金面上项目（11471045）和北京市自然科学基金（L172029）。
+
+%能生成获得更好的分类效果，且同类别地物空间更具有一致性
 
 
 
@@ -52,27 +54,26 @@
 
 \section{本文的组织结构}
 \label{sec:third}
-本文主要从遥感影像不确定性数据建模和地物分类一致性两个角度对高分影像分类识别展开研究。论文依据研究内容可划分为五个章节，各章节依次为：
+本文将从消除遥感影像地物分类混淆边界和保持分类结果中同类地物像素点的一致性两个角度对高分影像分类方法展开研究。论文依据研究内容可划分为五个章节，各章节依次为：
 
 第 \textbf{\ref{cha:chap01}} 章：系统地介绍了论文课题相关的研究背景、研究意义和国内外现状。重点对当前遥感影像分类中面临的挑战展开介绍，并针对这些问题，提出了改进方案，引出本课题主要的研究内容。
 
 第 \textbf{\ref{cha:chap02}} 章： 本章详细介绍了深度学习相关理论。介绍了卷积神经网络、全卷积神经网络和生成对抗网络这三个深度学习模型的结构和原理。然后介绍了基于全卷积网络的遥感影像分类方法。
 
 
-第 \textbf{\ref{cha:chap03}} 章：针对现有全卷积影像分类方法的缺陷，将条件生成对抗网络结构引入全卷积分割模型中，提出基于条件生成对抗网络的影像分割方法。并详细介绍了新提出方法的模型原理和算法实现。再在遥感影像分类实验上验证新提出方法的有效性。
+第 \textbf{\ref{cha:chap03}} 章：针对现有全卷积影像分类方法的缺陷与不足，将条件生成对抗网络结构引入全卷积分类模型中，提出基于条件生成对抗网络的影像分类方法。并详细介绍了新提出方法的模型原理和算法实现。在高分影像分类识别实验上验证新提出方法的有效性。
 
-第 \textbf{\ref{cha:chap04}} 章：通过预处理方法提取遥感影像数据的不确定信息特征，作为基于条件生成对抗网络的影像分割方法的先验特征，用于模型训练，提升新方法的分类精度，保证同类地物类内像素的空间一致性。
+第 \textbf{\ref{cha:chap04}} 章：首先利用面向对象模糊聚类分割方法得到高分影像的同质性分割单元。再从消除地物分类混淆边界和减少细碎错分区域两个角度分别提出融合边界特征的影像分类方法和基于辅助信息后处理的影像分类方法。最后通过量化和目视实验结果验证新提出的改进方法的有效性。
 
 第 \textbf{\ref{cha:chap05}} 章： 总结本论文课题的研究内容，归纳文中研究成果，并对论文中存在的一些问题提出未来的展望。
 
 
 \section{本文主要创新点}
 \label{sec:forth}
-本文研究内容主要有四个创新点：
+本文研究内容主要有三个创新点：
 \begin{enumerate}[(1)]
-    \item 将生成对抗训练的思想应用到全卷积影像分类模型中，提出基于条件生成对抗网络的影像方法，提高影像分类精度。
-    \item 针对两个三角形的模糊集值数据，提出一种新的区间值距离度量，能够表征数据间的相异性。
-    \item 结合新提出的数据模型和区间距离度量，改进现有的面向对象的模糊聚类分割方法，并应用到高分影像分割实验中。
-    \item 将生成对抗网络的思想应用到全卷积影像分割模型框架中，提出基于CGAN 的分割方法能生成更好的地物边界，且保持空间一致性。
+    \item 将生成对抗训练的思想应用到全卷积影像分类模型中，提出基于条件生成对抗网络的影像分类方法，提高影像分类精度。
+    \item 针对分割模型中池化、上采样丢失影像边界、位置特征的问题，在分割模型高阶语义特征图中融合预处理得到的边界掩膜特征信息，提出融合边界掩膜特征的影像分类方法，改进地物分类存在的歧义、模糊边界问题。
+    \item 对分割模型像素级预测的概率值进行后处理，考虑像素点同质性分割单元内其他像素点的类别关系，提出基于辅助信息后处理的影像分类方法，提升影像分类地物的完整性，减少细碎的错分区域。
 
 \end{enumerate}
