--- a/data/paper.tex
+++ b/data/paper.tex
@@ -1,14 +1,14 @@
 % !Mode:: "TeX:UTF-8"
 \begin{paper}
-\begin{enumerate}
-  \item \textbf{Tao Jiang}, Dan Hu, and Xianchuan Yu.  Enhanced IT2FCM algorithm using object-based triangular fuzzy set modeling for remote-sensing clustering[J]. Computers \& geosciences, 2018, 118: 14-26. (SCI 三区收录, 检索号:GQ6TC.)
-  \item Dan Hu, \textbf{Tao Jiang}, and Xianchuan Yu. The construction of non-convex fuzzy sets. 2017 13th International Conference on Natural Computation, Fuzzy Systems and Knowledge  Discovery (ICNC-FSKD), Guilin, 2017, pp. 1175-1181. (EI 收录, 检索号:20183005590187.)
-  \item Haihua Xing, Hui He, Xianchuan Yu, Dan Hu, \textbf{Tao Jiang}.  An Interval Type-2 Fuzzy Sets Generation Method for Remote Sensing Imagery Classification[J]. Computers \& geosciences, 2019.(SCI 三区， accept) \\
-  \end{enumerate}  
+  \begin{enumerate}
+    \item \textbf{Tao Jiang}, Dan Hu, and XXX(导师).  Enhanced IT2FCM algorithm using object-based triangular fuzzy set modeling for remote-sensing clustering[J]. Computers \& geosciences, 2018, 118: 14-26. (SCI 三区收录, 检索号:GQ6TC.)
+    \item Dan Hu, \textbf{Tao Jiang}, and XXX(导师). The construction of non-convex fuzzy sets. 2017 13th International Conference on Natural Computation, Fuzzy Systems and Knowledge  Discovery (ICNC-FSKD), Guilin, 2017, pp. 1175-1181. (EI 收录, 检索号:20183005590187.)
+    \item Haihua Xing, Hui He, XXX(导师), Dan Hu, \textbf{Tao Jiang}.  An Interval Type-2 Fuzzy Sets Generation Method for Remote Sensing Imagery Classification[J]. Computers \& geosciences, 2019.(SCI 三区， accept) \\
+  \end{enumerate}
 
 \end{paper}
 
-%International Conference on Natural Computation, Fuzzy Systems and Knowledge  Discovery ()
+%International Conference on Natural Computation, Fuzzy Systems and Knowledge  Discovery 
 
 % \hspace*{6em}
 
@@ -19,10 +19,10 @@
 \end{center}
 
 \begin{enumerate}[(1)]
-\item 自适应循优 $n$ 型模糊系统及其应用研究, 国家自然科学基金面上项目（11471045），2015.01-2018.12.
+  \item 自适应循优 $n$ 型模糊系统及其应用研究, 国家自然科学基金面上项目（11471045），2015.01-2018.12.
 
-\item 基于深度学习的遥感崩滑地质灾害信息提取，北京市自然科学基金（L172029），2017.10-
-2019.12.\\
+  \item 基于深度学习的遥感崩滑地质灾害信息提取，北京市自然科学基金（L172029），2017.10-
+        2019.12.\\
 
 \end{enumerate}
 
