--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -20,7 +20,7 @@
 
 @phdthesis{wulun2006,
   title={地理信息系统数据的不确定性问题},
-  author={邬伦 and 承继成 and 史文中},
+  author={邬伦},
   year={2006}
 }
 
@@ -691,4 +691,13 @@
   author={Kingma, Diederik P and Ba, Jimmy},
   journal={arXiv preprint arXiv:1412.6980},
   year={2014}
+}
+
+@inproceedings{horn1990hadamard,
+  title={The hadamard product},
+  author={Horn, Roger A},
+  booktitle={Proc. Symp. Appl. Math},
+  volume={40},
+  pages={87--169},
+  year={1990}
 }
