--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -9,19 +9,21 @@
 
 \section{本文的主要内容}
 \label{sec:5-1}
-遥感影像地物分类是遥感研究领域内一个重要问题，如何对地物类别正确识别、明确不同地物边界问题一直是一个研究热点。本文从两个角度提出了现有高分影像地物分类方法的改进方法，且对提出的方法分别进行理论推导和实验论证。针对遥感影像数据同物异谱、同谱异物等固有不确定性的特点，设计三角形模糊集值信息表达模型来表征影像数据特征，提出TFSV-IT2FCM 模糊聚类方法用于高分影像的地物无监督聚类分割识别。针对全卷积影像语义分割中高分影像地物类别一致性问题，文中结合CGAN 优秀的图像生成能力，提出了基于CGAN 的全卷积分割方法来得到清晰、明确的地物分类边界。将文中提出的两种方法分别用于遥感影像地物分类实验中，实验结果均表明相比已有方法，新提出的影像分割方法提高了地物分类的精度，能得到更准确的地物分类边界。具体工作如下：
+遥感影像地物分类是遥感研究领域内一个重要问题，如何对地物类别正确识别、明确不同地物边界问题一直是一个研究热点。本文从正确预测地物边界、同类地物区域内像素保持空间一致性两个角度提出了现有高分影像地物分类方法的改进方法，且对提出的方法分别进行理论推导和实验论证。为了增强影像分割像素点间的连续性，文中将对抗训练的思想应用到FCN 分类模型中，提出了基于CGAN 影像分类方法。针对遥感影像混淆边界与模型中边界信息的损失问题，文中提出融合边界特征信息的CGAN 影像分类方法。针对影像分类中细碎区域的错分问题，文中提出基于辅助信息后处理的CGAN 影像分类方法。具体研究工作如下：
 \begin{enumerate}[(1)]
-  \item 针对遥感影像数据固有的不确定性，设计三角形模糊集值表达模型提取影像特征。对于新设计的TFSV 数据模型，提出新的区间值距离度量两个TFSV 数据间的相似度。利用新提取的数据模型和距离度量改进现有面向对象的遥感影像模糊聚类分割方法，提出TFSV-IT2FCM 聚类分割算法。在 SPOT 5和高分二号影像上进行地物聚类分割均证明了文中提出的TFSV-IT2FCM 算法的有效性，其确实能识别近似光谱特征的不同地物，实现更好的分割识别结果。
-  \item 针对全卷积分割方法中上采样特征损失的问题，结合对抗网络的思想，提出基于CGAN 的全卷积语义分割方法。另外，正射影像波段和DSM 高程波段数据融合用于模型训练。在Vaihingen 影像数据上的实验结果表明新的分割方法能够得到更好的地物分割边界，且同一类别的地物具有更好的空间一致性。
+  \item 针对全卷积分割方法中上采样特征损失的问题，文中将对抗训练网络思想应用到FCN 模型中，提出基于CGAN 的全卷积影像分类方法，提升影像分类效果。融合影像正射影像波段和DSM 高程波段数据用于模型训练。在Vaihingen 影像数据上的实验结果表明基于CGAN 的影像分类方法能够获得更好的分类效果。
+  \item 针对因生成网络中池化操作和上采样操作导致的影像边界、位置信息损失的问题。首先由TFSV-IT2FCM 方法预处理得到影像分割单元边界图，然后在生成模型上采样操作的特征图内融合相同尺度的边界掩膜特征信息，提升高阶语义特征的边界位置信息，提出了融合边界特征的 CGAN 影像分类方法。实验结果表明融合边界特征的CGAN 影像分类方法能够获得更明确的地物分类边界。
+  \item 针对生成模型中各像素点未考虑邻近像素点间的关系，从而导致复杂地物类别出现错分区域的问题。文中考虑像素点所属同质性分割单元内其他像素点的类别预测关系，优化像素点类别预测概率，提出了基于辅助信息后处理的影像分类方法。添加后处理的方法在Vaihingen 数据集上的结果提升了同类地物区域内像素点的空间一致性。
+  \item 将融合边界特征和辅助信息后处理两种改进思路同时引入基于CGAN 影像分类方法中，改进影像分类的效果，实验结果证明了这两种方法的有效性。
 \end{enumerate}
 
 
 \section{未来的期望}
 \label{sec:5-2}
-本文提出的两种方法，一定程度上均能改进遥感影像地物分类边界划分问题，对提高影像分类的识别精度有所提高。之后的研究可从以下方面开展：
+本文提出的影像分类的改进方法，一定程度上均能提升遥感影像地物分类边界划分的效果，同时也能提高同类别地物区域像素点的空间一致性。之后的研究可从以下方面开展：
 \begin{enumerate}[(1)]
-  \item  第\ref{cha:chap03} 章提出的模糊聚类分割方法使用最简单的三角形模糊集对数据特征建模，使用其他类型模糊集（如梯形、钟形模糊集）对影像单元建模可以展开进一步的研究。
-  \item  第\ref{cha:chap04} 章提出的基于CGAN 分割方法在识别“车辆”时相对其他几类地物精度较低，原因主要是训练集影像中含有“车辆”的像素点占比较低，后续研究中构建模型目标函数时可以考虑给像素占比低的地物一个较高的权值，研究加权后的交叉熵代价能否提高像素占比小地物的识别效果。
-  \item  第\ref{cha:chap03} 章提出的模糊聚类分割方法能够保证类内地物整体一致，同时能较好的识别不同地物边界，后续工作中可以将该模糊聚类分割方法作为后处理过程添加到第\ref{cha:chap04} 章基于CGAN 分割方法中，期望同类地物内分割效果更好。
+  \item  第~\ref{cha:chap03} 章提出的基于CGAN 影像分类方法在识别“车辆”时相对其他几类地物精度较低，原因是训练集影像中含有“车辆”的像素点占比较低，后续研究中构建模型目标函数时可以考虑给像素占比低的地物一个较高的权值，研究加权后的交叉熵代价能否提高像素占比小地物的识别效果。
+  \item  第\ref{cha:chap04} 章融合边界特征方法中，融合边界掩膜时采取矩阵点乘的操作进行特征融合，其他方式的特征融合方法可以进一步研究探讨。
+  \item  第\ref{cha:chap04} 章基于辅助信息后处理的方法中只考虑像素点同质性分割单元内其他像素点的类别预测概率。后续研究可以考虑整幅影像中所有像素点之间的相互关系，对该像素点类别预测概率进行处理、优化。
   
 \end{enumerate}
