更新初稿版本0510

--- a/data/cover.tex
+++ b/data/cover.tex
@@ -19,7 +19,7 @@
 \cdate{\the\year 年 \the\month 月}
 
 \etitle{REMOTE SENSING IMAGE CLASSIFICATION BASED ON GENERATIVE ADVERSARIAL NETWORK}
-%Remote Sensing Image Classification Based on Fuzzy Clustering and Generative Adversarial Network
+%Remote Sensing Image Classification Based on Generative Adversarial Network
 
 % 定义中英文摘要和关键字
 \begin{cabstract}
@@ -41,14 +41,14 @@
 \begin{eabstract}
   Remote sensing image classification is a research hotspot in the field of remote sensing. How to quickly and accurately classify and identify  of remote sensing images is the focus of current remote sensing research. However, it is challenging to accurately classify remote sensing images, due to the inherent uncertainty of remote sensing images. High-resolution images provide high-quality detail information with large differences in their similar species, which leads to the misclassification, and it is difficult to get the correct classification boundary.
 
-  In recent years, with the development of Deep Learning theory and the proposal of Fully Convolutional Networks, image classification methods based on deep learning theory have been widely applied to remote sensing image classification tasks. However, the current image classification methods based on Fully Convolutional Networks are easy to lose the low-order boundary, location and other feature information in the pooling process and upsampling operation, resulting in confusion and ambiguity of classification boundary. In addition, the fully convolutional image classification method is a pixel-level classification, and in the image classification result, a finely divided area is likely to occur in the same type of feature region. Therefore, improving the existing fully convolutional image classification method and improving the image classification quality also have important research significance. The Generative Adversarial Network can continuously detect and correct the difference between the real sample and the generated data. The confrontation loss of the model enhances the continuity between the pixels of the image to a certain extent and maintains the overall consistency. Moreover, in the process of confrontation game, the generator can continuously strengthen the prediction ability of the segmentation model and improve the classification accuracy.  
+  In recent years, with the development of Deep Learning Theory and the proposal of Fully Convolutional Networks (FCN), image classification methods based on deep learning theory have been widely applied to remote sensing image classification tasks. However, the current image classification methods based on FCN are easy to lose the low-order boundary, location and other feature information in the pooling process and upsampling operation, resulting in confusion and ambiguity of classification boundary. In addition, FCN method is a pixel-wise classification method, a finely divided area is likely to occur in the same type of feature region. Therefore, improving the FCN method quality has important research significance. The Generative Adversarial Network(GAN) can continuously detect and correct the difference between the real sample and the generated data. The adversarial loss of the model enhances the continuity between the pixels of the image to a certain extent and maintains the overall consistency. Moreover, in the process of cadversarial training game, the generator can continuously strengthen the prediction ability of the segmentation model and improve the classification accuracy.  
   
-  Therefore, this paper introduces the idea of ​​confrontation training into the full convolution image classification model to improve the accuracy of image classification. The image classification method based on conditional generation confrontation network is improved. Firstly, the homogeneity segmentation unit information map of image is preprocessed by fuzzy clustering segmentation method. In order to obtain a clearer classification boundary, the boundary mask features of the segmentation unit are merged into the feature map of the model to enhance the boundary and position information of the high-order features. In order to obtain a more complete classification result of the feature, in the prediction of the pixel class, the relationship between other pixels in the homomorphic segmentation unit is considered, and the class prediction result is optimized. Based on the above ideas, this paper studies and discusses the classification of remote sensing image features. The specific research contents are as follows:
+  Therefore, this work introduces the idea of ​​confrontation training into the FCN model to improve the accuracy of image classification. The image classification method based on conditional GAN (CGAN) is improved. Firstly, the homogeneity segmentation units image is obtained by fuzzy clustering method. In order to obtain a clearer classification boundary, the boundary mask features of the segmentation units are fused into the feature map of the model to enhance the boundary and position information of the high-order features. In order to obtain a more complete classification result of the feature, the relationship between other pixels in the homomorphic segmentation unit is considered, and the class prediction result is optimized. Based on the above ideas, this work studies and discusses the classification of remote sensing image. The specific research contents are as follows:
 \begin{enumerate}[(1)]
-  \item Introducing the confrontation training idea into the full convolution image classification model, and propose a full convolution image classification method based on conditional confrontation generation network. The new method has stronger classification ability than the original method on high score image data, which can improve the image classification accuracy.
+  \item Combine the adversarial training model with FCN model, and propose a FCN classification method based on CGAN. The new method has stronger classification ability than the original FCN method on high-resolution remote sensing image, which can improve the image classification accuracy.
   \item First of all, fuzzy clustering segmentation method is used to preprocess the image data to obtain the image segmentation unit information map. Then, the boundary mask features of the segmentation unit are obtained, and the boundary mask features of different scales obtained by downsampling are fused to the feature maps of the corresponding scales of the model, and the boundary and position information of the high-order features are strengthened. New method can accurate and clear feature classification boundaries.
-  \item In this paper, the class probability value of the model prediction pixel is updated and corrected. Considering the class prediction relationship of other pixels in the homogenous segmentation unit of the pixel, the prediction probability value of the pixel class is updated according to a certain strategy, and the post-processing based on auxiliary information is proposed. Image classification method. Adding auxiliary information post-processing methods can improve the spatial consistency of pixels in the same feature area. Reduce the subdivided areas within the category and the classification results are more complete.
-  \item The two improved ideas of fusion boundary feature and auxiliary information post-processing are introduced into the image classification method based on conditional generation confrontation network. The experimental results show that the classification accuracy of the new image classification method is obviously improved, the boundary of the object is more accurate, and the mis-division area within the same type of object is greatly reduced.
+  \item In this work, the class probability  of the model prediction pixel is updated and corrected. Considering the class prediction relationship of other pixels in the homogenous segmentation unit of the pixel, the prediction probability value of the pixel class is updated according to a certain strategy, and the post-processing based on auxiliary information is proposed. Image classification method. Adding auxiliary information post-processing methods can improve the spatial consistency of pixels in the same feature area. Reduce the subdivided areas within the category and the classification results are more complete.
+  \item The two improved ideas of fusion boundary feature and auxiliary information post-processing are introduced into the image classification method based on CGAN. The experimental results show that the classification accuracy of the new image classification method is obviously improved, the boundary of the object is more accurate, and the mis-division area within the same type of object is greatly reduced.
   
 \end{enumerate}
 
