--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -18,9 +18,13 @@
   year={2010}
 }
 
-@phdthesis{wulun2006,
+
+@article{wulun2006,
   title={地理信息系统数据的不确定性问题},
-  author={邬伦},
+  author={邬伦 and 承继成 and 史文中},
+  journal={测绘科学},
+  number={5},
+  pages={13--19},
   year={2006}
 }
 
