--- a/data/cover.tex
+++ b/data/cover.tex
@@ -13,7 +13,7 @@
 
 \cauthor{江涛}
 \csupervisor{XXX 导师} %\\ \hspace*{6em}}余先川教授、胡丹副教授
-\cdepartment[]{信息科学与技术学院16级}
+\cdepartment{信息科学与技术学院 2016级}
 \cmajor{计算机软件与理论}
 \cnum{201621210026}
 \cdate{\the\year 年 \the\month 月}
