--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -45,7 +45,7 @@
 
 % 
 
-由于深度学习在图像分类识别的巨大成功与广泛应用，研究学者逐渐将深度学习理论引入遥感影像分类，基于深度学习理论的研究方法逐渐成为遥感影像发展的下一个趋势。文献 \cite{hu2015transferring} 利用迁移学习知识，首次将深度卷积神经网络应用到高分影像场景分类中，能有效学习影像的高级特征表示。 Marco 等人 \cite{castelluccio2015land} 将预训练的 GoogLeNet 网络参数，迁移到 UC Merced 土地利用数据集 \footnote{数据集访问链接:http://weegee.vision.ucmerced.edu/datasets/landuse.html} 上，其提出的方法在 UC Merced 数据集上获得了 $10\%$ 的分类识别精度提升，实验结果也表明了 CNN 结构在遥感影像上的成功。 2016年，Romero 等人 \cite{romero2016unsupervised} 使用贪婪分层无监督预训练，结合稀疏表示理论，实现对高分影像土地利用和土地覆盖的无监督分类。 Kampffmeyer 等 \cite{kampffmeyer2016semantic} 则使用 CNN 结构量化遥感影像像素尺度上的不确定性，对图像上每个像素进行分类，完成遥感影像的类别分类和语义分割。 文献 \cite{maggiori2016fully} 基于全卷积分类网络（Fully convolutional network，FCN），将CNN 模型中的全连接层全部替换为卷积层，模型输出影像所有像素点类别，实现遥感影像的像素级分类。 U-Net \cite{ronneberger2015u} 网络结合反卷积与跳跃网络的优势，对 FCN 结构加以改进。文献 \cite{li2018deepunet} 基于 U-Net 网络完成对海陆影像水域-陆地分割识别。文献 \cite{zhang2018road} 则在 U-Net 基础上结合残差学习的思想，完成对遥感影像道路信息的提取。
+由于深度学习在图像分类识别的巨大成功与广泛应用，研究学者逐渐将深度学习理论引入遥感影像分类，基于深度学习理论的研究方法逐渐成为遥感影像发展的下一个趋势。文献 \cite{hu2015transferring} 利用迁移学习知识，首次将深度卷积神经网络应用到高分影像场景分类中，能有效学习影像的高级特征表示。 Marco 等人 \cite{castelluccio2015land} 将预训练的 GoogLeNet 网络参数，迁移到 UC Merced 土地利用数据集 \footnote{数据集访问链接:http://weegee.vision.ucmerced.edu/datasets/landuse.html} 上，其提出的方法在 UC Merced 数据集上获得了 $10\%$ 的分类识别精度提升，实验结果也表明了 CNN 结构在遥感影像上的成功。 2016年，Romero 等人 \cite{romero2016unsupervised} 使用贪婪分层无监督预训练，结合稀疏表示理论，实现对高分影像土地利用和土地覆盖的无监督分类。 Kampffmeyer 等 \cite{kampffmeyer2016semantic} 则使用 CNN 结构量化遥感影像像素尺度上的不确定性，对图像上每个像素进行分类，完成遥感影像的类别分类和语义分割。 文献 \cite{maggiori2016fully} 基于全卷积分类网络（Fully convolutional network，FCN），将CNN 模型中的全连接层全部替换为卷积层，模型输出影像所有像素点类别，实现遥感影像的像素级分类。 U-Net \cite{ronneberger2015u} 网络结合反卷积与跳跃网络的优势，对 FCN 结构加以改进。文献 \cite{li2018deepunet} 基于 U-Net 网络完成对海陆影像水域-陆地分割识别。文献 \cite{zhang2018road} 则在 U-Net 基础上结合残差学习的思想，完成对遥感影像道路信息的提取。2018年，Gong Cheng\cite{8252784} 等人对遥感影像CNN特征添加度量学习的正则项，最小化影像分类错误，提出的D-CNN 方法满足同类影像彼此映射紧密，而不同类影像则被尽可能映射得更远。2019年，Zhang Ce\cite{zhang2019joint}等人首次提出通用的联合深度学习框架同时处理土地覆盖和土地利用问题。
 
 
 % \subsection{存在的主要问题}
