--- a/data/cover.tex
+++ b/data/cover.tex
@@ -12,7 +12,7 @@
 \makeatother
 
 \cauthor{江涛}
-\csupervisor{XXX 导师} %\\ \hspace*{6em}}余先川教授、胡丹副教授
+\csupervisor{余先川教授、胡丹副教授} %\\ \hspace*{6em}}余先川教授、胡丹副教授
 \cdepartment{信息科学与技术学院 2016级}
 \cmajor{计算机软件与理论}
 \cnum{201621210026}
@@ -36,7 +36,7 @@
   \end{enumerate}
 \end{cabstract}
 
-\ckeywords{遥感影像, 地物分类, 全卷积网络, 生成对抗网络，深度学习 }
+\ckeywords{生成对抗网络，全卷积网络, 遥感影像, 地物分类, 深度学习 }
 
 \begin{eabstract}
   Remote sensing image classification is a research hotspot in the field of remote sensing. How to quickly and accurately classify and identify  of remote sensing images is the focus of current remote sensing research. However, it is challenging to accurately classify remote sensing images, due to the inherent uncertainty of remote sensing images. High-resolution images provide high-quality detail information with large differences in their similar species, which leads to the misclassification, and it is difficult to get the correct classification boundary.
@@ -54,4 +54,4 @@
 
 \end{eabstract}
 
-\ekeywords{Remote Sensing Imagery, Land Cover Classification, Fully Convolutional Network, Generative Adversarial Network, Deep Learning}
+\ekeywords{Generative Adversarial Network, Fully Convolutional Network,  Remote Sensing Imagery, Land Cover Classification, Deep Learning}
