--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -29,6 +29,28 @@
 }
 
 
+@ARTICLE{8252784, 
+author={G. {Cheng} and C. {Yang} and X. {Yao} and L. {Guo} and J. {Han}}, 
+journal={IEEE Transactions on Geoscience and Remote Sensing}, 
+title={When Deep Learning Meets Metric Learning: Remote Sensing Image Scene Classification via Learning Discriminative CNNs}, 
+year={2018}, 
+volume={56}, 
+number={5}, 
+pages={2811-2821}, 
+doi={10.1109/TGRS.2017.2783902}, 
+ISSN={0196-2892}, 
+month={May},}
+
+@article{zhang2019joint,
+  title={Joint Deep Learning for land cover and land use classification},
+  author={Zhang, Ce and Sargent, Isabel and Pan, Xin and Li, Huapeng and Gardiner, Andy and Hare, Jonathon and Atkinson, Peter M},
+  journal={Remote sensing of environment},
+  volume={221},
+  pages={173--187},
+  year={2019},
+  publisher={Elsevier}
+}
+
 @inproceedings{he2005comparison,
   title={A comparison of PCA/ICA for data preprocessing in remote sensing imagery classification},
   author={He, Hui and Yu, Xianchuan},
@@ -704,4 +726,35 @@
   volume={40},
   pages={87--169},
   year={1990}
+}
+
+@article{maulik2017remote,
+  title={Remote Sensing Image Classification: A survey of support-vector-machine-based advanced techniques},
+  author={Maulik, Ujjwal and Chakraborty, Debasis},
+  journal={IEEE Geoscience and Remote Sensing Magazine},
+  volume={5},
+  number={1},
+  pages={33--52},
+  year={2017},
+  publisher={IEEE}
+}
+
+
+@article{belgiu2016random,
+  title={Random forest in remote sensing: A review of applications and future directions},
+  author={Belgiu, Mariana and Dr{\u{a}}gu{\c{t}}, Lucian},
+  journal={ISPRS Journal of Photogrammetry and Remote Sensing},
+  volume={114},
+  pages={24--31},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@inproceedings{han2012parameter,
+  title={Parameter selection in SVM with RBF kernel function},
+  author={Han, Shunjie and Qubo, Cao and Meng, Han},
+  booktitle={World Automation Congress 2012},
+  pages={1--4},
+  year={2012},
+  organization={IEEE}
 }
